# tokio_tasks_shutdown

./: Cargo.toml  README.md
src/: lib.rs  named_task.rs  on_shutdown_or.rs  on_stop_signal.rs  results.rs  should_shutdown.rs
tests/: bad_guy.rs  simple.rs
