[package]
	edition = "2021"
	name = "async_systems_shutdown"
	version = "0.1.0"

[dependencies]
	arc-swap = "1"
	futures = "0.3"
	log = "0.4"
	pin-project-lite = "0.2"
	thiserror = "1"
	tokio = { version = "1", features = ["sync", "rt", "macros", "signal", "time"] }
	tokio-util = "0.7"

[dev-dependencies]
	anyhow = "1"
	regex = "1"
	simple_logger = "4"
