[package]
	authors = ["Thomas BESSOU <thomas.bessou@hotmail.fr>"]
	description = "Easily manage and gracefully shutdown tokio tasks while monitoring their return results"
	edition = "2021"
	license = "LGPL-3.0-only"
	name = "tokio_tasks_shutdown"
	repository = "https://github.com/Ten0/tokio_tasks_shutdown"
	version = "0.3.0"

[dependencies]
	arc-swap = "1"
	futures = "0.3"
	log = "0.4"
	pin-project-lite = "0.2"
	thiserror = "1"
	tokio = { version = "1", features = ["sync", "rt", "macros", "signal", "time"] }

[dev-dependencies]
	anyhow = "1"
	regex = "1"
	simple_logger = "4"
	tokio = { version = "1", features = ["rt-multi-thread"] }
	tokio-test = "0.4"
